in Private::storeListResult(), don't try to create a delete job for an empty list of items.  probably means that the ItemDeleteJob class should assert on such cases so we find other errors like this.

Patch by Ahti, thanks!

BUG: 287625
MERGE: 4.7
(cherry picked from commit aedcddf94b1b10b929d244d1063cb61c2c467105)